--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 
     <head>
-        <title>Page Title</title>
+        <title>Chai Tapri</title>
     </head>
 
     <body>
 
-        <h1>This is a Heading</h1>
+        <h1>This is a Chai Tapri Menu</h1>
         <p>This is a paragraph.</p>
 
     </body>
