--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <h1>This is a Chai Tapri Menu</h1>
         <p>This is a paragraph.</p>
+        <img src="menu-image-1.jpg">
 
     </body>
 
