--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <h1>This is a Chai Tapri Menu</h1>
         <p>This is a paragraph.</p>
-        <img src="menu-image-1.jpg">
+        <img src="menu-image-1.jpg" height="100%" width="auto">
 
     </body>
 
