--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
 
         <h1>This is a Chai Tapri Menu</h1>
-        <p>This is a paragraph.</p>
-        <img src="menu-image-1.jpg" height="100%" width="auto">
+        <p>This is a .</p>
+        <img src="menu-image-1.jpg" height="100%">
 
     </body>
 
